fix: viewports now default to small on mobile3

--- a/styles.css
+++ b/styles.css
@@ -502,12 +502,13 @@ body {
     max-width: 100% !important;
     border-radius: 0;
     top: 0;
-    height: 100svh-env(safe-area-inset-bottom);
+    height: 98vh;
+    height: calc(100dvh-env(safe-area-inset-bottom));
     padding: 2rem 0.5rem;
     background: rgba(30, 32, 40, 0.88); /* more see-through */
     z-index: 2;
     overflow-y: auto;
-    height: 100svh;
+    height: 100dvh;
     padding-bottom: calc(120px + env(safe-area-inset-bottom)) !important;
     padding: 1rem 0.2rem !important;
     box-sizing: border-box;
@@ -614,7 +615,6 @@ body {
 
   .right-div, .right-div.experiences-active {
     overflow-y: auto !important;
-    height: 100svh !important;
     padding-bottom: 5vh !important;
   }
 }
